// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon Component > should render with icon name 1`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M17.0399 7.92603L20.0399 6.92603V17M4 6.5V12.0001M4 12.0001V17.0001M4 12.0001H12M12 6.5V12.0001M12 12.0001V17.0001"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 2`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 10.4998V9.99976C15 8.3429 16.3431 6.99976 18 6.99976H18.1716C19.7337 6.99976 20.9996 8.26627 20.9996 9.82837C20.9996 10.5785 20.702 11.2979 20.1716 11.8284L15 16.9999L21.5 17M3 6.99988V11.9999M3 11.9999V16.9999M3 11.9999H11M11 6.99988V11.9999M11 11.9999V16.9999"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 3`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M15 7H21L17 11H18C19.6569 11 21 12.3431 21 14C21 15.6569 19.6569 17 18 17C17.3793 17 16.7738 16.8077 16.2671 16.4492C15.7604 16.0907 15.3775 15.5838 15.1709 14.9985M3 7V12M3 12V17M3 12H11M11 7V12M11 12V17"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 4`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 17H10M10 17H12M10 17L14 6M12 6H14M14 6H16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 5`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M8 11.5H12.5M8 11.5V6H12.5C14.433 6 16 7.23122 16 8.75C16 10.2688 14.433 11.5 12.5 11.5M8 11.5V17H13.5C15.433 17 17 15.7688 17 14.25C17 12.7312 15.433 11.5 13.5 11.5H12.5"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 6`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 18H18M8 6V11C8 13.2091 9.79086 15 12 15C14.2091 15 16 13.2091 16 11V6"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 7`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M12 17H20M8 15L5.5 18L4 17M12 7H20M8 5L5.5 8L4 7"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 8`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M11 17H19M4 15.6853V15.5C4 14.6716 4.67157 14 5.5 14H5.54054C6.34658 14 7.00021 14.6534 7.00021 15.4595C7.00021 15.8103 6.8862 16.1519 6.67568 16.4326L4 20.0002L7 20M11 7H19M4 5L6 4V10"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 9`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M6 17C6 17.5523 5.55228 18 5 18C4.44772 18 4 17.5523 4 17C4 16.4477 4.44772 16 5 16C5.55228 16 6 16.4477 6 17Z M6 7C6 7.55228 5.55228 8 5 8C4.44772 8 4 7.55228 4 7C4 6.44772 4.44772 6 5 6C5.55228 6 6 6.44772 6 7Z M11 17H19M11 7H19M6 17C6 17.5523 5.55228 18 5 18C4.44772 18 4 17.5523 4 17C4 16.4477 4.44772 16 5 16C5.55228 16 6 16.4477 6 17ZM6 7C6 7.55228 5.55228 8 5 8C4.44772 8 4 7.55228 4 7C4 6.44772 4.44772 6 5 6C5.55228 6 6 6.44772 6 7Z"
      fill="currentColor"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;

exports[`Icon Component > should render with icon name 10`] = `
<div>
  <svg
    aria-hidden="true"
    class=""
    fill="transparent"
    focusable="false"
    height="24"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M21 12V16.2C21 17.8802 21 18.7202 20.673 19.362C20.3854 19.9265 19.9265 20.3854 19.362 20.673C18.7202 21 17.8802 21 16.2 21H7.8C6.11984 21 5.27976 21 4.63803 20.673C4.07354 20.3854 3.6146 19.9265 3.32698 19.362C3 18.7202 3 17.8802 3 16.2V12M16 7L12 3M12 3L8 7M12 3V15"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="1.5"
    />
  </svg>
</div>
`;
